Deployment aca16485-f747-4811-9ec1-21261a8b4ee7: Run number 411

--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -48,9 +48,9 @@
     {
         <meta property="og:image" content="@(Model.Value<IPublishedContent>("openGraphImage").Url(mode:UrlMode.Absolute))">
     }
-    else
+    else if (settings.HasValue("oGImageFallback"))
     {
-        <meta property="og:image" content="~/WRA-OpenGraph.png">
+        <meta property="og:image" content="@(settings.Value<IPublishedContent>("oGImageFallback").Url(mode:UrlMode.Absolute))">
     }
     <link rel="icon" href="~/favicon.ico" sizes="32x32" />
     <link rel="icon" href="~/icon.svg" type="image/svg+xml" />
