--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -44,5 +44,6 @@
 @import 'blocks/cta-quick-links';
 @import 'blocks/image-text-row';
 @import 'blocks/hot-tip-library';
+@import 'blocks/_calendar';
 
 @import 'umbraco-editors';
