--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/homeHero.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/homeHero.cshtml
@@ -77,26 +77,9 @@
     <div class="block-home-hero__events d-flex flex-column align-items-start p-0 px-lg-5 py-lg-5 pt-lg-6 g-4 mt-auto mt-lg-0">
         <h2 class="js-calendar-tab mobile-calendar-tab h4 mb-0 mb-lg-4 p-4 p-lg-0" role="button" aria-hidden="true">Upcoming Events</h2>
         <div class="block-home-hero__events-inner d-none d-lg-flex flex-column align-items-start w-100 mt-auto">
-
-            <!-- TO DO: Pull in Events -->
-            <ol class="list-unstyled">
-                <li class="mb-3">
-                    <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                    <p class="mb-0 fs-sm">October 1</p>
-                    <p class="mb-0 fs-sm">Wisconsin Dells</p>
-                </li>
-                <li class="mb-3">
-                    <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                    <p class="mb-0 fs-sm">October 1</p>
-                    <p class="mb-0 fs-sm">Wisconsin Dells</p>
-                </li>
-                <li class="mb-3">
-                    <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                    <p class="mb-0 fs-sm">October 1</p>
-                    <p class="mb-0 fs-sm">Wisconsin Dells</p>
-                </li>
-            </ol>
-
+            @{
+                await Html.RenderPartialAsync("_MiniCalendar");
+            }            
             <a href="/events" class="btn btn-link-arrow btn-light ms-n2 mt-auto">
                 More Events
                 <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,25 +94,9 @@
 
 <div class="js-calendar-panel block-home-hero__events-mobile d-flex d-lg-none w-100 text-white">
     <div class="flex-column align-items-start  p-4 pb-5 pt-0">
-        <!-- TO DO: Pull in Events -->
-        <ol class="list-unstyled">
-            <li class="mb-3">
-                <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                <p class="mb-0 fs-sm">October 1</p>
-                <p class="mb-0 fs-sm">Wisconsin Dells</p>
-            </li>
-            <li class="mb-3">
-                <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                <p class="mb-0 fs-sm">October 1</p>
-                <p class="mb-0 fs-sm">Wisconsin Dells</p>
-            </li>
-            <li class="mb-3">
-                <a href="/" class="btn btn-link btn-light ms-n2">Lorem Ipsim</a>
-                <p class="mb-0 fs-sm">October 1</p>
-                <p class="mb-0 fs-sm">Wisconsin Dells</p>
-            </li>
-        </ol>
-
+        @{
+            await Html.RenderPartialAsync("_MiniCalendar");
+        }
         <a href="/events" class="btn btn-link-arrow btn-light ms-n2 mt-auto">
             More Events
             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
