--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -556,6 +556,7 @@
     </footer>
 
     @RenderSection("scriptsPre", required: false)
+    <script src="https://cdn.jsdelivr.net/npm/@@event-calendar/build@2.6.1/event-calendar.min.js"></script>
     <script src="/js/dist/global.js" asp-append-version="true"></script>
     @RenderSection("scripts", required: false)
     @Html.Raw(settings?.Value("bodyCloseScripts"))
