--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/iconItem.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/iconItem.cshtml
@@ -40,10 +40,10 @@
 <span class="@className" style="@style">
     @if (content.HasValue("icon"))
     {
-        <span aria-hidden="true" class="fa-regular fa-solid fa-@content.Icon"></span>
+        <span aria-hidden="true" class="@content.Icon"></span>
     }
     else
     {
-        <span aria-hidden="true" class="fa-regular fa-solid fa-star"></span>
+        <span aria-hidden="true" class="fas fa-star"></span>
     }
 </span>
