--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
@@ -86,7 +86,7 @@
             </div>
         }
         <div class="d-md-none mt-4 text-center">
-            <a href="/news-updates" class="btn btn-link-arrow">
+            <a href="/news-updates@(moreQuery)" class="btn btn-link-arrow">
                 All News
                 <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0.820801 8L12.0314 8" stroke="#050F1E" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
