--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -21,6 +21,7 @@
 
     var articles = content.FeaturedOnlineArticles;
 
+    var moreArticles = content.Value<IEnumerable<Link>>("moreArticles");
 }
 
 <div class="w-100 bg-white mt-6 mt-lg-8 pb-6 pb-lg-8">
@@ -78,7 +79,7 @@
                             @if (articles.Any())
                             {
                                 <ul class="list-unstyled d-flex flex-column list-group list-group-flush">
-                                    @foreach (var child in articles.Where(x => x.IsVisible()).Take(3))
+                                    @foreach (var child in articles.Where(x => x.IsVisible()).Take(4))
                                     {
 
                                         var articleTitle = child.HasProperty("Title") ? child.Value("Title") : child.Name;
@@ -111,33 +112,25 @@
                         }
 
                     </div>
-
-                    @if (content.FeaturedOnlineArticles != null)
+                  
+                    @if (moreArticles.Any())
                     {
-                        @if (articles.Any() && articles.Count() > 3)
-                        {
-                            var totalArticles = articles.Count() - 3;
-                            var articlesMore = articles.Where(x => x.IsVisible()).TakeLast(totalArticles);
 
-                            <div class="col-lg-5 ps-lg-1 ms-lg-auto">
-                                <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
-                                    <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
-                                        More News
-                                    </h3>
-                                    <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
-                                        @foreach (var child in articlesMore.Take(3))
-                                        {
-                                            var articleMoreTitle = child.HasProperty("Title") ? child.Value("Title") : child.Name;
-
-                                            <li>
-                                                <a href="@child.Url()" class="fw-bold fs-sm" style="color: inherit">@articleMoreTitle</a>
-                                            </li>
-                                        }
-                                    </ul>
-                                </div>
+                        <div class="col-lg-5 ps-lg-1 ms-lg-auto">
+                            <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
+                                <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
+                                    More News
+                                </h3>
+                                @* <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
+                                    @foreach (var link in moreArticles.Where(x => x.IsVisible()))
+                                    {
+                                        <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
+                                    }
+                                </ul> *@
                             </div>
-                        }
+                        </div>
                     }
+                    
                 </div>
                 <a href="/news-updates/" class="btn btn-primary btn-sm d-lg-none w-100 mt-4">See All</a>
             </div>
