--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -60,7 +60,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     @RenderSection("head", required: false)
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-rqn26AG5Pj86AF4SO72RK5fyefcQ/x32DNQfChxWvbXIyXFePlEktwD18fEz+kQU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,800&family=Roboto+Serif:ital,opsz,wght@0,8..144,400;1,8..144,400&display=swap" rel="stylesheet">
     <style> html { @logoStyle } </style>
     <link href="/css/dist/global.css" rel="stylesheet" asp-append-version="true">
@@ -121,7 +121,7 @@
                         </button>
                         <a href="/cart/" class="site-header__mobile-utility me-n2 d-lg-none" aria-label="Cart">
                             <div class="position-relative">
-                                <i class="fa fa-cart-shopping"></i>
+                                <i class="far fa-shopping-cart"></i>
                                 @(await Component.InvokeAsync("CartCount", new { homePage = home }))
                             </div>
                         </a>
@@ -191,7 +191,7 @@
                         </button>
                         <a href="/cart/" class="site-header__utility d-none d-lg-flex align-items-center ms-auto bg-transparent border-0 px-3 fs-lg" aria-label="Cart">
                             <div class="position-relative">
-                                <i class="fa fa-cart-shopping"></i>
+                                <i class="far fa-shopping-cart"></i>
                                 @(await Component.InvokeAsync("CartCount", new { homePage = home }))
                             </div>
                         </a>
