Deployment adddb5a9-c9c6-49cc-9d05-7ab61125652c: Run number 435

--- a/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MagazineLanding.cshtml
@@ -45,7 +45,7 @@
                     <a href="@content.Value("Pdf")" class="btn btn-primary">Download PDF</a>
                 </div>
                 <div class="col-lg-8">
-                    <div class="d-flex flex-row align-items-center justify-content-between mb-3">
+                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-md-between mb-3">
                         <h2 class="h3 mb-0">Read in News & Updates</h2>
                         <a href="/news-updates/" class="btn btn-primary btn-sm d-none d-lg-block">See All</a>
                     </div>
