Deployment 6c2f3efb-d724-4fa9-8cad-d053a631a32e: Run number 440

--- a/src/WRA.Umbraco.Web/Views/Article.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Article.cshtml
@@ -59,7 +59,7 @@
                 @articleTitle
             </h1>
             <div>
-                @if (content.HasValue("Author") && !String.IsNullOrEmpty(content.Author.Value("authorTitle").ToString()))
+                @if (content.HasValue("Author"))
                 {
                     bool hasTitle = !String.IsNullOrEmpty(content.Author.Value("authorTitle").ToString());
                     string setSpacer = hasTitle ? ", " : "";
