--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/pageHeader.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/pageHeader.cshtml
@@ -7,7 +7,7 @@
 
 <header class="page-header @(content.Value<Boolean>("hideAccent") ? "page-header--no-accent" : "")">
     <div class="container">
-        <div class="container--sm">
+        <div class="container--sm pe-7 pe-md-0">
             <h1 class="mb-0">
                 @if (content.HasValue("heading"))
                 {
