Deployment 66b0823a-cddf-4bd5-8ac9-d6936b5a35f2: Run number 441

--- a/src/WRA.Umbraco.Web/Views/NewsArticles.cshtml
+++ b/src/WRA.Umbraco.Web/Views/NewsArticles.cshtml
@@ -56,7 +56,7 @@
                 <div class="text-center">
                     <ul role="tablist" class="js-article-filters tabs__tabs-list">
                         <li role="presentation">
-                            <button id="tab-all" class="js-article-filter tabs__trigger text-decoration-none border-0" value="" role="tab" aria-controls="article-results" @(setAll)>All Posts</button>
+                            <button id="tab-all" class="js-article-filter tabs__trigger text-decoration-none h-100 border-0" value="" role="tab" aria-controls="article-results" @(setAll)>All Posts</button>
                         </li>
                         @foreach (var child in newsCategories.Where(x => x.Name != "All"))
                         {
