Deployment ae98edbd-6e47-42a5-bef2-586f9cc3b025: Run number 442

--- a/src/WRA.Umbraco.Web/Views/_Layout.cshtml
+++ b/src/WRA.Umbraco.Web/Views/_Layout.cshtml
@@ -467,7 +467,7 @@
                                 {
                                     <li>
                                         <a href="@settings.Value("facebook")" target="_blank">
-                                            <i class="fa-brands fa-facebook-f fa-lg-f"></i>
+                                            <i class="fab fa-facebook-f fa-lg"></i>
                                             <span class="visually-hidden">Facebook</span>
                                         </a>
                                     </li>
@@ -476,7 +476,7 @@
                                 {
                                     <li>
                                         <a href="@settings.Value("youtube")" target="_blank">
-                                            <i class="fa-brands fa-youtube fa-lg"></i>
+                                            <i class="fab fa-youtube fa-lg"></i>
                                             <span class="visually-hidden">YouTube</span>
                                         </a>
                                     </li>
@@ -485,7 +485,7 @@
                                 {
                                     <li>
                                         <a href="@settings.Value("twitter")" target="_blank">
-                                            <i class="fa-brands fa-twitter fa-lg"></i>
+                                            <i class="fab fa-twitter fa-lg"></i>
                                             <span class="visually-hidden">Twitter</span>
                                         </a>
                                     </li>
@@ -494,7 +494,7 @@
                                 {
                                     <li>
                                         <a href="@settings.Value("instagram")" target="_blank">
-                                            <i class="fa-brands fa-instagram fa-lg"></i>
+                                            <i class="fab fa-instagram fa-lg"></i>
                                             <span class="visually-hidden">Instagram</span>
                                         </a>
                                     </li>
@@ -503,7 +503,7 @@
                                 {
                                     <li>
                                         <a href="@settings.Value("linkedin")" target="_blank">
-                                            <i class="fa-brands fa-linkedin-in fa-lg"></i>
+                                            <i class="fab fa-linkedin-in fa-lg"></i>
                                             <span class="visually-hidden">LinkedIn</span>
                                         </a>
                                     </li>
